--- a/_pages/team.html
+++ b/_pages/team.html
@@ -18,7 +18,15 @@ Award 2: (2018.09-2019.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <fo
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 
- <li><strong>  Shuai You</strong> (Co-supervisor <a href="https://www.uvic.ca/science/math-statistics/people/home/faculty/lesperance_mary.php"> Dr. Mary Lesperance</a>, UVic), 2019.09 – Present<br>
+	<li><strong>  Yushan Hu</strong> , 2021.09 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+ <!--	Internship:  <br>  -->
+Award: (2021.9-2022.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
+ <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
+
+	<li><strong>  Shuai You</strong> (Co-supervisor <a href="https://www.uvic.ca/science/math-statistics/people/home/faculty/lesperance_mary.php"> Dr. Mary Lesperance</a>, UVic), 2019.09 – Present<br>
  <!--	Internship:  <br>  -->
  Award: (2019.09) UVic Facuty of Graduate Studies Entrance Scholarship <br>   <!--,   <font color="blue">$5,000</font> 
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
@@ -26,14 +34,6 @@ Award 2: (2018.09-2019.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <fo
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 	
-<li><strong> Mahsa Tavakoli</strong>, 2021.09 – Present<br>
- <!--	Internship:  <br>  -->
- Award 1: (2021.09 - 2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000&nbsp; </font> <br> 
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
-
 
  <!--    <li><strong>Hoi Suen Wong</strong>, 2018.9 – Present<br>  --> 
  <!--    Award 1: (2018.9 - 2020.02) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $19,000/year&nbsp; </font> <br>  -->
@@ -60,7 +60,11 @@ Award: (2021.9-2022.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font c
 	<li><strong>  Chang Bi</strong>,  2021.09 – Present<br>	  </li>
 	<li><strong>  Zhaoze Liu</strong>,  2021.09 – Present<br>	  </li>
 	<li><strong>  Hadi Roopeai</strong>,  2021.09 – Present<br>	  </li>
+	<li><strong>  Yupeng Zhao </strong>,  2021.09 – Present<br>	  </li>
+	<li><strong>  Jinglan Qiu </strong>,  2021.09 – Present<br>	  </li>
 
+	
+	
 	<li><strong>  Xiaolin Huang</strong>,  2020.09 – Present<br>	  </li>
 	<li><strong>  Xiangling Ji</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	
 Work Study: (2021.01 - 2021.04) Centre for Biomedical Research, UVic  <br>
