--- a/_pages/team.html
+++ b/_pages/team.html
@@ -10,13 +10,6 @@ author_profile: true
 <h4>PhD Students</h4>
 <ul>
 	
-  <li><strong>Yan Xu</strong>, 2018.01 – Present (on sick leave)<br>
-Award 1: (2018.05-2018.08) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
-Award 2: (2018.09-2019.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
-<!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
 
 	<li><strong>  Yushan Hu</strong> , 2021.09 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
  <!--	Internship:  <br>  -->
@@ -42,6 +35,13 @@ Award: (2021.9-2022.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font c
   <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
    <!--    </li> -->
  
+<!--  <li><strong>Yan Xu</strong>, 2018.01 – Present (on sick leave)<br>  -->
+<!--Award 1: (2018.05-2018.08) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> -->
+<!-- Award 2: (2018.09-2019.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
+<!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+<!--  </li> -->
 
 </ul>
 
