--- a/_pages/research.html
+++ b/_pages/research.html
@@ -9,6 +9,10 @@ author_profile: true
     
 <!--<h3>Published </h3> -->
 <ol>
+	
+<li>The impact of lockdown timing on COVID-19 transmission across US counties. (<em> EClinicalMedicine</em> 2021 ) <a href="https://doi.org/10.1016/j.eclinm.2021.101035"> Link of Paper </a> 
+</li>
+	
 <li>The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. (<em> Statistics in Medicine</em> 2021 ) <a href="https://doi.org/10.1002/sim.8868"> Link of Paper </a> and 
 <a href="https://cran.r-project.org/web/packages/DesignCTPB/index.html"> Software package </a> <br>
 <em>(<small> The first author, Yitao Lu, is a summer intern undergraduate student in my lab, who lead programming and 1st draft preparation of this project.</small>)</em> </li>
@@ -16,7 +20,7 @@ author_profile: true
 	
 <li>On logistic Box-Cox regression for flexibly estimating the shape and strength of exposure-disease relationships. (<em>The Canadian Journal of Statistics</em> 2021) <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cjs.11587"> Link of Paper </a>
 <!--     or <a href="https://doi.org/10.1111/jfir.12210"> Journal paper Link </a> --->
-    </li>
+</li>
 
 <li>Stock Market Openness and Market Quality: Evidence from the Shanghai-Hong Kong Stock Connect Program. (<em>Journal of Financial Research</em> 2020) <!--<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3543713"> SSRN manuscript </a>  or -->
 	<a href="https://doi.org/10.1111/jfir.12210"> Link of Paper </a> </li>
