--- a/_pages/team.html
+++ b/_pages/team.html
@@ -10,6 +10,13 @@ author_profile: true
 <h4>PhD Students</h4>
 <ul>
 	
+	<li><strong>  Shuai You</strong> (Co-supervisor <a href="https://www.uvic.ca/science/math-statistics/people/home/faculty/lesperance_mary.php"> Dr. Mary Lesperance</a>, UVic), 2019.09 – Present<br>
+ <!--	Internship:  <br>  -->
+ Award: (2019.09) UVic Facuty of Graduate Studies Entrance Scholarship <br>   <!--,   <font color="blue">$5,000</font> 
+ <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
 
 	<li><strong>  Yushan Hu</strong> , 2021.09 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
  <!--	Internship:  <br>  -->
@@ -21,13 +28,6 @@ Award: (2021.9-2022.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font c
 
 	<li><strong>  Yupeng Zhao </strong>,  2021.09 – Present<br>	  </li>
 
-	<li><strong>  Shuai You</strong> (Co-supervisor <a href="https://www.uvic.ca/science/math-statistics/people/home/faculty/lesperance_mary.php"> Dr. Mary Lesperance</a>, UVic), 2019.09 – Present<br>
- <!--	Internship:  <br>  -->
- Award: (2019.09) UVic Facuty of Graduate Studies Entrance Scholarship <br>   <!--,   <font color="blue">$5,000</font> 
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
 	
 
  <!--    <li><strong>Hoi Suen Wong</strong>, 2018.9 – Present<br>  --> 
@@ -50,14 +50,27 @@ Award: (2021.9-2022.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font c
 <h4>Master Students</h4>
 
 <ul>
-
-	<li><strong>  Haochen Ning</strong>,  2021.09 – Present<br>	  </li>
-	<li><strong>  Chang Bi</strong>,  2021.09 – Present<br>	  </li>
-	<li><strong>  Zhaoze Liu</strong>,  2021.09 – Present<br>	  </li>
-	<li><strong>  Hadi Roopeai</strong>,  2021.09 – Present<br>	  </li>
-	<li><strong>  Jinglan Qiu </strong>,  2021.09 – Present<br>	  </li>
-
+		<li><strong>Yiqi Qiao</strong> (Co-supervisor <a href="http://www.math.uvic.ca/~jzhou/"> Dr. Julie Zhou </a>, UVic), 2017.09 – Present (on sick leave)<br>
+ <!--	Internship:  <br>  -->
+	Award: (2017.09) UVic Facuty of Graduate Studies Entrance Scholarship <br> <!--,   <font color="blue">$5,000</font> <br> -->
+ <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
 	
+	
+	
+<li><strong>  Yuying Huang</strong> , 2019.09 – Present<br> <!--(Co-supervisor <a href="https://www.uvic.ca/socialsciences/economics/faculty-staff/home/faculty-directory/xu-ke.php"> Dr. Ke Xu</a>, UVic) -->
+Work Study: (2019.09 - 2020.04) Centre for Biomedical Research, UVic  <br>
+Award: (2020.09-2021.08) VADA Trainee Scholarship (NSERC CREATE)<br> <!-- <font color="blue"> $19,000 </font> <br> -->
+Internship: (2021.06-2021.08) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
+ <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
+
+
+
 	<li><strong>  Xiaolin Huang</strong>,  2020.09 – Present<br>	  </li>
 	<li><strong>  Xiangling Ji</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	
 Work Study: (2021.01 - 2021.04) Centre for Biomedical Research, UVic  <br>
@@ -78,38 +91,16 @@ Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <fo
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
 	</li>
 
-
-<li><strong>  Yang Guo</strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2019.09 – Present<br>
- <!--	Internship:  <br>  -->
-Award: (2019.09-2020.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
-Internship: (2020.07-2020.08) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
-Work Study: (2020.09 - 2020.12) Centre for Biomedical Research, UVic  <br> 
-Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics, UVic <br>
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
 	
-<li><strong>  Yuying Huang</strong> , 2019.09 – Present<br> <!--(Co-supervisor <a href="https://www.uvic.ca/socialsciences/economics/faculty-staff/home/faculty-directory/xu-ke.php"> Dr. Ke Xu</a>, UVic) -->
-Work Study: (2019.09 - 2020.04) Centre for Biomedical Research, UVic  <br>
-Award: (2020.09-2021.08) VADA Trainee Scholarship (NSERC CREATE)<br> <!-- <font color="blue"> $19,000 </font> <br> -->
-Internship: (2021.06-2021.08) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
+	
+	<li><strong>  Haochen Ning</strong>,  2021.09 – Present<br>	  </li>
+	<li><strong>  Chang Bi</strong>,  2021.09 – Present<br>	  </li>
+	<li><strong>  Zhaoze Liu</strong>,  2021.09 – Present<br>	  </li>
+	<li><strong>  Hadi Roopeai</strong>,  2021.09 – Present<br>	  </li>
+	<li><strong>  Jinglan Qiu </strong>,  2021.09 – Present<br>	  </li>
 
 	
- <!--	Internship:  <br>  -->
- <!--   Award: (2019.9) UVic Entrance Scholarship,   <font color="blue">$5,000</font> <br> -->
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
 
-		<li><strong>Yiqi Qiao</strong> (Co-supervisor <a href="http://www.math.uvic.ca/~jzhou/"> Dr. Julie Zhou </a>, UVic), 2017.09 – Present (on sick leave)<br>
- <!--	Internship:  <br>  -->
-	Award: (2017.09) UVic Facuty of Graduate Studies Entrance Scholarship <br> <!--,   <font color="blue">$5,000</font> <br> -->
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
 
 	
 </ul>
@@ -167,6 +158,18 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 	
 <h4>Master Students</h4>
 <ul>
+	<li><strong>  Yang Guo</strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2019.09 – 2021.07<br>
+ <!--	Internship:  <br>  -->
+Award: (2019.09-2020.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
+Internship: (2020.07-2020.08) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
+Work Study: (2020.09 - 2020.12) Centre for Biomedical Research, UVic  <br> 
+Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics, UVic <br>
+ <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+   First job: Manager, <a href="https://www.scotiabank.com/ca/en/personal.html"> Scotiabank</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
+
+	
   <li><strong>  <a href="https://studentweb.uvic.ca/~thddhks1256/webpage.html"> Songwan Joun </a></strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2021.4<br>
  <!--	Internship:  <br>  -->
 	 Research Assistant: (2019.05 -2019.08) Department of Mathematics and Statistics, UVic <br>
