--- a/_pages/team.html
+++ b/_pages/team.html
@@ -165,7 +165,7 @@ Internship: (2020.07-2020.08) Department of Mathematics and Statistics, Universi
 Work Study: (2020.09 - 2020.12) Centre for Biomedical Research, UVic  <br> 
 Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics, UVic <br>
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
-   First job: Manager, <a href="https://www.scotiabank.com/ca/en/personal.html"> Scotiabank</a>, China  <br> -->
+   First job: Manager, <a href="https://www.scotiabank.com/ca/en/personal.html"> Scotiabank</a>, China  <br> 
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 
@@ -201,7 +201,7 @@ Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics,
   <li><strong>Peijie Xie</strong>, 2019.05 <br>
 	Work Study: (2017.09 - 2018.04) Centre for Biomedical Research, UVic  <br>
 	Internship:  (2018.05 - 2018.12)   <a href="https://www.bci.ca/"> British Columbia Investment Management Corporation </a>, Victoria <br>
-	First job: <a href="https://www.ea.com/"> Electronic Arts Inc. </a> , Vancouver
+	First job: <a href="https://www.ea.com/"> Electronic Arts Inc. </a> , Vancouver  <br> 
 	Current job: <a href="https://www.ea.com/"> Amazon </a> , Vancouver
 
  <!--	Award 2: Trainee Award 2018.9-2019.9  <span class="pink">($19,000)</span> <br> -->
