--- a/_pages/team.html
+++ b/_pages/team.html
@@ -165,7 +165,7 @@ Internship: (2020.07-2020.08) Department of Mathematics and Statistics, Universi
 Work Study: (2020.09 - 2020.12) Centre for Biomedical Research, UVic  <br> 
 Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics, UVic <br>
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
-   First job: Manager, <a href="https://www.scotiabank.com/ca/en/personal.html"> Scotiabank</a>, China  <br> 
+   First job: Manager, <a href="https://www.scotiabank.com/ca/en/personal.html"> Scotiabank</a>, Canada  <br> 
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 
