--- a/_pages/team.html
+++ b/_pages/team.html
@@ -116,7 +116,8 @@ Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <fo
 
 <ul>
 	<li><strong>  Danielle Tsao</strong> , 2021.05 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
-Award: (2021.05-2021.08) NSERC Undergraduate Student Research Awards <br>
+Award1: (2021.05-2021.08) NSERC Undergraduate Student Research Awards <br>
+Award2: (2021.09-2022.04) Biotalent SWPP <br>
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
