--- a/_pages/research.html
+++ b/_pages/research.html
@@ -10,7 +10,7 @@ author_profile: true
 <!--<h3>Published </h3> -->
 <ol>
 	
-<li>The impact of lockdown timing on COVID-19 transmission across US counties. (<em> EClinicalMedicine</em> 2021 ) <a href="https://doi.org/10.1016/j.eclinm.2021.101035"> Link of Paper </a> 
+<li>The impact of lockdown timing on COVID-19 transmission across US counties. (<em> EClinicalMedicine</em> 2021 ) <a href="https://www.thelancet.com/journals/eclinm/article/PIIS2589-5370(21)00315-1/fulltext"> Link of Paper </a> 
 </li>
 	
 <li>The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. (<em> Statistics in Medicine</em> 2021 ) <a href="https://doi.org/10.1002/sim.8868"> Link of Paper </a> and 
