--- a/_pages/links.html
+++ b/_pages/links.html
@@ -5,7 +5,7 @@ permalink: /links/
 author_profile: true
 ---
 
-<h3><strong>Useful links</strong><br>
+<h3><strong>Useful Academic links</strong><br>
 </h3>
 
 </ul>
@@ -21,6 +21,16 @@ author_profile: true
 <li> <a href="https://www.youtube.com/watch?v=UbOlhhpNj-A&ab_channel=mathetal"> Video: Tutorial for using Seurat to annotate cell-types in clusters of scRNA-seq data</a> </li>  
 <li> <a href="https://broadinstitute.github.io/2019_scWorkshop/"> Workshop about analysis of single cell RNA-seq data</a> </li>  
 </ul>
+
+<h3><strong>Other useful links</strong><br>
+</h3>
+
+</ul>
+<li> <a href="https://www.uvic.ca/search/maps-buildings/jogging-map.pdf"> Jogging map around UVic</a> </li> 
+<li> <a href="https://greatruns.com/location/victoria-bc/"> Jogging map in Victoria</a> </li> 
+</ul>
+
+
 
 <h3><strong>News</strong><br>
 </h3>
