--- a/_pages/links.html
+++ b/_pages/links.html
@@ -27,7 +27,8 @@ author_profile: true
 
 </ul>
 <li> <a href="https://www.uvic.ca/search/maps-buildings/jogging-map.pdf"> Jogging map around UVic</a> </li> 
-<li> <a href="https://greatruns.com/location/victoria-bc/"> Jogging map in Victoria</a> </li> 
+<li> <a href="https://greatruns.com/location/victoria-bc/"> Jogging map #1 in Victoria</a> </li> 
+<li> <a href="https://www.runvictoria.ca/top-picks-by-region"> Jogging map #2 in Victoria</a> </li> 
 </ul>
 
 
