--- a/_pages/links.html
+++ b/_pages/links.html
@@ -29,6 +29,7 @@ author_profile: true
 <li> <a href="https://www.uvic.ca/search/maps-buildings/jogging-map.pdf"> Jogging map around UVic</a> </li> 
 <li> <a href="https://greatruns.com/location/victoria-bc/"> Jogging map #1 in Victoria</a> </li> 
 <li> <a href="https://www.runvictoria.ca/top-picks-by-region"> Jogging map #2 in Victoria</a> </li> 
+<li> <a href="https://www.alltrails.com/canada/british-columbia/victoria/trail-running"> Jogging map #3 in Victoria</a> </li> 
 </ul>
 
 
