--- a/_pages/research.html
+++ b/_pages/research.html
@@ -18,7 +18,7 @@ author_profile: true
 <em>(<small> The first author, Yitao Lu, is a summer intern undergraduate student in my lab, who lead programming and 1st draft preparation of this project.</small>)</em> </li>
 	
 	
-<li>On logistic Box-Cox regression for flexibly estimating the shape and strength of exposure-disease relationships. (<em>The Canadian Journal of Statistics</em> 2021) <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cjs.11587"> Link of Paper </a>
+<li>On logistic Box-Cox regression for flexibly estimating the shape and strength of exposure-disease relationships. (<em>The Canadian Journal of Statistics</em> 2021) <a href="https://onlinelibrary.wiley.com/doi/10.1002/cjs.11587"> Link of Paper </a>
 <!--     or <a href="https://doi.org/10.1111/jfir.12210"> Journal paper Link </a> --->
 </li>
 
