--- a/_pages/team.html
+++ b/_pages/team.html
@@ -193,7 +193,7 @@ Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics,
  <li><strong>Ailan Shi</strong> , 2019.06 <br>
 	Internship: (2018.05-2018.08) <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver   <br>
     Award: (2018.09-2019.06) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
-	First job: <a href="https://www.lalamove.com/"> LalaMove</a>, Shenzhen
+	First job: <a href="https://www.lalamove.com/"> LalaMove</a> (货拉拉), Shenzhen
  <br>
 	<!-- (Co-supervisor <a href="http://www.providenceresearch.ca/researcher/don-sin"> Dr. Don Sin </a> and Dr. Maen Obeidat, University of British Columbia) -->
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
