--- a/_pages/team.html
+++ b/_pages/team.html
@@ -64,19 +64,6 @@ Award: (2021.9-2022.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font c
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
-	
-	
-	
-<li><strong>  Yuying Huang</strong> , 2019.09 – Present<br> <!--(Co-supervisor <a href="https://www.uvic.ca/socialsciences/economics/faculty-staff/home/faculty-directory/xu-ke.php"> Dr. Ke Xu</a>, UVic) -->
-Work Study: (2019.09 - 2020.04) Centre for Biomedical Research, UVic  <br>
-Award: (2020.09-2021.08) VADA Trainee Scholarship (NSERC CREATE)<br> <!-- <font color="blue"> $19,000 </font> <br> -->
-Internship: (2021.06-2021.08) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
-
-
 
 	<li><strong>  Xiaolin Huang</strong>,  2020.09 – Present<br>	  </li>
 	<li><strong>  Xiangling Ji</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	
@@ -89,17 +76,13 @@ Work Study: (2021.01 - 2021.04) Centre for Biomedical Research, UVic  <br>
 	<li><strong>  Yichen Yan</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	  </li>	
   Award	1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship<br> <!--,   <font color="blue">$2,500</font> <br> -->
 Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
-	<li><strong>  Shaoze Zhou</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	  </li>
-
-
-	
+	<li><strong>  Shaoze Zhou</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	  </li>	
 	
 	<li><strong>  Haochen Ning</strong>,  2021.09 – Present<br>	  </li>
 	<li><strong>  Chang Bi</strong>,  2021.09 – Present<br>	  </li>
 	<li><strong>  Zhaoze Liu</strong>,  2021.09 – Present<br>	  </li>
-	<li><strong>  Hadi Roopeai</strong>,  2021.09 – Present<br>	  </li>
+<!--	<li><strong>  Hadi Roopeai</strong>,  2021.09 – Present<br>	  </li> -->
 	<li><strong>  Jinglan Qiu </strong>,  2021.09 – Present<br>	  </li>
-
 	
 
 
@@ -170,6 +153,16 @@ Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics,
    First job: Manager, <a href="https://www.scotiabank.com/ca/en/personal.html"> Scotiabank</a>, Canada  <br> 
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
+
+	<li><strong>  Yuying Huang</strong> , 2019.09 – Present<br> <!--(Co-supervisor <a href="https://www.uvic.ca/socialsciences/economics/faculty-staff/home/faculty-directory/xu-ke.php"> Dr. Ke Xu</a>, UVic) -->
+Work Study: (2019.09 - 2020.04) Centre for Biomedical Research, UVic  <br>
+Award: (2020.09-2021.08) VADA Trainee Scholarship (NSERC CREATE)<br> <!-- <font color="blue"> $19,000 </font> <br> -->
+Internship: (2021.06-2021.08) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
+ <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+First job: PhD student, <a href="https://uwaterloo.ca/statistics-and-actuarial-science/"> University of Waterloo </a>, Canada  <br> 
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
+
 
 	
   <li><strong>  <a href="https://studentweb.uvic.ca/~thddhks1256/webpage.html"> Songwan Joun </a></strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2021.4<br>
