--- a/_pages/team.html
+++ b/_pages/team.html
@@ -33,7 +33,7 @@ Award: (2021.9-2022.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font c
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 
-	<li><strong>  Chang Bi</strong>,  2021.09 – Present<br>	  </li> (Co-supervisor <a href="https://www.uvic.ca/research/centres/arc/people/adjunct-members/fabbro-sebastien.php"> Dr. Sebastien Fabbro</a>, NRC)
+	<li><strong>  Chang Bi</strong>  </li> (Co-supervisor <a href="https://www.uvic.ca/research/centres/arc/people/adjunct-members/fabbro-sebastien.php"> Dr. Sebastien Fabbro</a>, NRC),  2021.09 – Present<br>
 	
 	
 	<li><strong>  Yupeng Zhao </strong>,  2021.09 – Present<br>	  </li>
