--- a/_pages/team.html
+++ b/_pages/team.html
@@ -82,7 +82,6 @@ Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <fo
 	<li><strong>  Shaoze Zhou</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	  </li>	
 	
 	<li><strong>  Haochen Ning</strong>,  2021.09 – Present<br>	  </li>
-	<li><strong>  Chang Bi</strong>,  2021.09 – Present<br>	  </li>
 	<li><strong>  Zhaoze Liu</strong>,  2021.09 – Present<br>	  </li>
 <!--	<li><strong>  Hadi Roopeai</strong>,  2021.09 – Present<br>	  </li> -->
 	<li><strong>  Jinglan Qiu </strong>,  2021.09 – Present<br>	  </li>
@@ -93,7 +92,8 @@ Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <fo
 </ul>
 
 <h4>Long-term Visitors</h4>
-	<li><strong>  Elham Majd</strong> (Lecturer, Islamic Azad University, Iran), 2020.10 – Present<br>	
+	<li><strong>  <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a> </strong> (Assistant Professor, University of Saskatchewan, Canada), 2021.01 – Present<br>	
+	<li><strong>  Dr. Elham Majd</strong> (Lecturer, Islamic Azad University, Iran), 2020.10 – Present<br>	
 	<li><strong>  Xiaowen Cao</strong> (PhD student, Hebei University of Technology, China), 2020.02 – Present<br>	
 
 
