--- a/_pages/research.html
+++ b/_pages/research.html
@@ -10,7 +10,7 @@ author_profile: true
 <!--<h3>Published </h3> -->
 <ol>
 	
-<li>Integrative COVID-19 Biological Network Inference with Probabilistic Core Decomposition. (<em> Briefings in Bioinformatics</em> 2021 ) <a href="http://dx.doi.org/10.1093/bib/bbab455"> Link of Paper </a> 
+<li>Integrative COVID-19 Biological Network Inference with Probabilistic Core Decomposition. (<em> Briefings in Bioinformatics</em> 2021 ) <a href="https://academic.oup.com/bib/advance-article-abstract/doi/10.1093/bib/bbab455/6425808"> Link of Paper </a> 
 </li>	
 	
 <li>The impact of lockdown timing on COVID-19 transmission across US counties. (<em> EClinicalMedicine</em> 2021 ) <a href="https://www.thelancet.com/journals/eclinm/article/PIIS2589-5370(21)00315-1/fulltext"> Link of Paper </a> 
