--- a/_pages/team.html
+++ b/_pages/team.html
@@ -110,22 +110,6 @@ Award2: (2021.09-2022.04) Biotalent SWPP <br>
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 
-	<li><strong>  Lizhang Chen (Beijing Jiaotong University) </strong> , 2021.07 – 2021.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
-Award: (2021.07-2021.10) MITACS Globalink Research Internship <br>
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
-
-	<li><strong>  Haijun Jia (Beihang University)</strong> , 2021.07 – 2021.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
-Award: (2021.07-2021.10) MITACS Globalink Research Internship <br>
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
-<!--	
-  <li><strong>Alistair Brogan</strong>, Summer 2008
-    Topic: The Mathematics of Principal-Agent Problems
-  </li>
--->
 	
 </ul>
 	
@@ -213,8 +197,23 @@ First job: International Rice Research Institute  <br>
 
 	<h4>Undergraduate Students</h4>
 <ul>
-   <li><strong>Yitao Lu (University of Science and Technology of China)</strong>, Summer internship, 2019.07 – 2019.10 <br>  </li>
-  <li><strong>Yushan Hu (Northwestern Polytechnical University)</strong>, Summer internship, 2019.07 – 2019.10 <br>  </li>
+   <li><strong>Yitao Lu (University of Science and Technology of China)</strong>, Summer internship, 2019.07 – 2019.10 <br>  
+	   First job: PhD Student, School of Data Science,  <a href="https://scholars.cityu.edu.hk/en/persons/yitao-lu(2f2c7c44-8355-42e7-9de8-bf57068104e0).html"> City University of HongKong</a>, China  <br>
+	</li>
+  <li><strong>Yushan Hu (Northwestern Polytechnical University)</strong>, Summer internship, 2019.07 – 2019.10 <br>  
+	   First job: PhD student, <a href="https://www.uvic.ca/science/math-statistics/"> University of Victoria </a>, Canada  <br> -->
+</li>
+		<li><strong>  Lizhang Chen (Beijing Jiaotong University) </strong> , 2021.07 – 2021.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+Award: (2021.07-2021.10) MITACS Globalink Research Internship <br>
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
+
+	<li><strong>  Haijun Jia (Beihang University)</strong> , 2021.07 – 2021.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+Award: (2021.07-2021.10) MITACS Globalink Research Internship <br>
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
 </ul>
 	
 </ul>
