--- a/_pages/team.html
+++ b/_pages/team.html
@@ -201,7 +201,7 @@ First job: International Rice Research Institute  <br>
 	   First job: PhD Student, School of Data Science,  <a href="https://scholars.cityu.edu.hk/en/persons/yitao-lu(2f2c7c44-8355-42e7-9de8-bf57068104e0).html"> City University of HongKong</a>, China  <br>
 	</li>
   <li><strong>Yushan Hu (Northwestern Polytechnical University)</strong>, Summer internship, 2019.07 – 2019.10 <br>  
-	   First job: PhD student, <a href="https://www.uvic.ca/science/math-statistics/"> University of Victoria </a>, Canada  <br> -->
+	   First job: PhD student, <a href="https://www.uvic.ca/science/math-statistics/"> University of Victoria </a>, Canada  <br>
 </li>
 		<li><strong>  Lizhang Chen (Beijing Jiaotong University) </strong> , 2021.07 – 2021.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
 Award: (2021.07-2021.10) MITACS Globalink Research Internship <br>
