--- a/_pages/team.html
+++ b/_pages/team.html
@@ -79,7 +79,9 @@ Work Study: (2021.01 - 2021.04) Centre for Biomedical Research, UVic  <br>
 	<li><strong>  Yichen Yan</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	  </li>	
   Award	1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship<br> <!--,   <font color="blue">$2,500</font> <br> -->
 Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
-	<li><strong>  Shaoze Zhou</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	  </li>	
+	<li><strong>  Shaoze Zhou</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	 
+	Award: (2021.09-2022.04) Biotalent SWPP <br>
+	</li>	
 	
 	<li><strong>  Haochen Ning</strong>,  2021.09 – Present<br>	  </li>
 	<li><strong>  Zhaoze Liu</strong>,  2021.09 – Present<br>	  </li>
