--- a/_pages/openings.html
+++ b/_pages/openings.html
@@ -19,8 +19,8 @@ author_profile: true
         <li> Department offer about $5000/year TA salary for all graduate students. </li>
 	<li> Entrance scholarship is available for students selected by all statistis faculty members.</li> 
 	<li> Students with A-class GPA receive Faculty of Science scholarship since their second year. </li> 
-	<li> Research Assistant positions (supported by my research grants) are available for students with proven strong research ability and motivation. <li>
-	<li> Outstanding students have opportunites to have "research" internship supported by MITACS or other funding. <li>
+	<li> Research Assistant positions (supported by my research grants) are available for students with proven strong research ability and motivation. </li>
+	<li> Outstanding students have opportunites to have "research" internship supported by MITACS or other funding. </li>
 	<li> My students are also encouraged to apply <a href="http://vada.cs.umanitoba.ca/admissions/application-form/"> VADA scholarship </a>. </li>
 	<li> <a href="https://www.uvic.ca/vpfo/accounting/assets/docs/tuition/tuition-schedule.pdf"> UVic tuition </a> is about $2000 per term, which is much lower than most other universities in Canada.</li>
 <ol>
