--- a/_pages/openings.html
+++ b/_pages/openings.html
@@ -17,7 +17,7 @@ author_profile: true
 <ol>
 	<li> I have multiple openings in PhD and MSc students. PhD applicants are preferred. </li> 
         <li> Department offer about $5000/year TA salary for all graduate students. </li>
-	<li> Entrance scholarship is available for students selected by all statistis faculty members.</li> 
+	<li> Entrance scholarship is available for students selected by committee.</li> 
 	<li> Students with A-class GPA receive Faculty of Science scholarship since their second year. </li> 
 	<li> Research Assistant positions (supported by my research grants) are available for students with proven strong research ability and motivation. </li>
 	<li> Outstanding students have opportunites to have "research" internship supported by MITACS or other funding. </li>
