--- a/_pages/research.html
+++ b/_pages/research.html
@@ -13,7 +13,7 @@ Trainnees are underlined, last/corresponding authors denoted by *
 <li> <u>Guo Y </u>, Esfahani F, Shao X, Srinivasan V, Thomo A, Xing L, Zhang X*. Integrative COVID-19 Biological Network Inference with Probabilistic Core Decomposition. (<em> Briefings in Bioinformatics</em> 2021 ) <a href="https://doi.org/10.1093/bib/bbab455"> Link of Paper </a> 
 </li>	
 	
-<li> <u>Huang X </u>, Shao X, Xing L, <u>Hu Y</u>, Sin DD, Zhang X*. The impact of lockdown timing on COVID-19 transmission across US counties. (<em> EClinicalMedicine</em> 2021 ) <a href="https://www.thelancet.com/journals/eclinm/article/PIIS2589-5370(21)00315-1/fulltext"> Link of Paper </a> 
+<li> <u>Huang X </u>, Shao X, Xing L, <u>Hu Y</u>, Sin DD*, Zhang X*. The impact of lockdown timing on COVID-19 transmission across US counties. (<em> EClinicalMedicine</em> 2021 ) <a href="https://www.thelancet.com/journals/eclinm/article/PIIS2589-5370(21)00315-1/fulltext"> Link of Paper </a> 
 </li>
 	
 <li> <u>Lu Y</u>, Zhou J, Xing L, Zhang X*. The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. (<em> Statistics in Medicine</em> 2021 ) <a href="https://doi.org/10.1002/sim.8868"> Link of Paper </a> and 
