--- a/_pages/research.html
+++ b/_pages/research.html
@@ -18,7 +18,7 @@ Trainnees are underlined, last/corresponding authors denoted by *
 	
 <li> <u>Lu Y</u>, Zhou J, Xing L, Zhang X*. The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. (<em> Statistics in Medicine</em> 2021 ) <a href="https://doi.org/10.1002/sim.8868"> Link of Paper </a> and 
 <a href="https://cran.r-project.org/web/packages/DesignCTPB/index.html"> Software package </a> <br>
-<em>(<small> The first author, Yitao Lu, is a summer intern undergraduate student in my lab, who lead programming and 1st draft preparation of this project.</small>)</em> </li>
+<em>(<small> The first author is an intern undergraduate student in my lab, who lead programming and 1st draft preparation of this project.</small>)</em> </li>
 	
 	
 <li>Xu K, Zheng X, Xing L, Zhang X. Stock Market Openness and Market Quality: Evidence from the Shanghai-Hong Kong Stock Connect Program. (<em>Journal of Financial Research</em> 2020) <!--<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3543713"> SSRN manuscript </a>  or -->
