--- a/_pages/openings.html
+++ b/_pages/openings.html
@@ -24,3 +24,14 @@ author_profile: true
 	<li> My students are also encouraged to apply <a href="http://vada.cs.umanitoba.ca/admissions/application-form/"> VADA scholarship </a>. </li>
 	<li> <a href="https://www.uvic.ca/vpfo/accounting/assets/docs/tuition/tuition-schedule.pdf"> UVic tuition </a> is about $2000 per term, which is much lower than most other universities in Canada.</li>
 <ol>
+
+
+<h2> Prospective graduate or senior undergraduae students who are Canadian and permenant residence should check the following funding resources provided by the Government of Canada’s Student Work Placement Program</h2> 
+<ol>	
+	<li> <a href="https://www.wil-ait.digital/en/"> WIL Digital </a> </li> 
+        <li> <a href="https://technationcanada.ca/en/future-workforce-development/career-ready-program/">  Technation </a> </li>
+	<li> <a href="https://www.biotalent.ca/programs/student-work-placement-program/">  BioTalent </a> </li>	
+	<li> <a href="https://eco.ca/environmental-professionals/employment-funding-and-job-board/apply-for-job-funding/">  EcoCanada </a> </li>
+	<li> <a href="https://cahrc-ccrha.ca/programs/agritalent">  Canadian Agricultural Human Resource Council </a> </li>
+<!--	<li> <a href="https://cahrc-ccrha.ca/programs/agritalent">  Canadian Agricultural Human Resource Council </a> </li> -->
+<ol>
