--- a/_pages/links.html
+++ b/_pages/links.html
@@ -9,6 +9,7 @@ author_profile: true
 </h3>
 
 </ul>
+<li> <a href="http://bioconductor.org/books/3.13/OSCA.multisample/"> Ebook: Multi-Sample Single-Cell Analyses with Bioconductor  </a> </li>
 <li> <a href="https://github.com/sgyzetrov/ComputeCanada_Resources"> A tutorial of using Compute Canada Servers prepared by my Student Simon Guo </a> </li>
 <li> <a href="https://docs.computecanada.ca/wiki/JupyterNotebook"> A tutorial of using Rstudio on Compute Canada Servers</a> </li>
 <li> <a href="https://www.youtube.com/playlist?list=PLmTpraKlPXDSPbP2L8MYZoweGSzi9gNTr"> The Data Scientist's Toolbox, Video by big names from Hopkins </a> </li>	
