--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -6,6 +6,8 @@ author_profile: true
 ---
 		  <h3><strong>Regular Courses</strong></h3>	  
 <ul>
+<li>Fall 2022: STAT 469/556 &nbsp; Machine Learning </li> 
+<li>Spring 2021: STAT 454/563 &nbsp; Machine Learning </li> 
 <li>Spring 2021: STAT 454/563 &nbsp; TOPICS:APPLIED STATISTICS: Machine Learning </li> 
 <li>Spring 2021: STAT 355 &nbsp;Statistical Methods in Health Sciences </li> 
 <li>Fall 2019: STAT 260 &nbsp;Introduction to Probability and Statistics I </li>
@@ -17,10 +19,6 @@ author_profile: true
 			  
 		<h3><strong>Directed Study Courses</strong></h3>	 
 <ul>
-<li>Fall 2020:  STAT 556 &nbsp; Applied Biostatistics Methods in Medical Research</li>
-<li>Spring 2020:  STAT 456 &nbsp; Advance topics in Bioinformatics</li>
-<li>Fall 2019:  STAT 556 &nbsp; Advance Machine learning and its application in Bioinformatics</li>
-<li>Summer 2019:  STAT 456/556 &nbsp; Advance Machine learning and its application in Bioinformatics</li>	
-<li>Fall 2017: STAT 556 &nbsp; Topic in Statistics - Bioinformatics / Computational Biology </li>	
+<li> I offer directed study courses every year.
 </ul>	
 
