--- a/_pages/research.html
+++ b/_pages/research.html
@@ -10,7 +10,7 @@ Trainnees are underlined, last/corresponding authors denoted by *
 
 <!--<h3>Published </h3> -->
 <ol>
-<li> <u>Guo Y </u>, Esfahani F, Shao X, Srinivasan V, Thomo A, Xing L, Zhang X*. Integrative COVID-19 Biological Network Inference with Probabilistic Core Decomposition. (<em> Briefings in Bioinformatics</em> 2021 ) <a href="https://doi.org/10.1093/bib/bbab455"> Link of Paper </a> 
+<li> <u>Guo Y </u>, Esfahani F, Shao X, Srinivasan V, Thomo A, Xing L, Zhang X*. Integrative COVID-19 Biological Network Inference with Probabilistic Core Decomposition. (<em> Briefings in Bioinformatics</em> 2021 ) <a href="http://track.smtpsendmail.com/9032119/c?p=dURESqMbVp7SYyXWYP_rJD8i4ORrND9MaXC870moZQF77VBu4oAd_78x_borV95YAdwD92-lIeDhQwIHq1DGaTsvuUF2lli7FfHsGMFMs2-RCRr7439q7HTVUxr22EVbk3x7a8TG7EWHTZWfd6bww3urY2wB44ugbdN38WA4Dol7SoV0Euu2HCY5Qw_Q4ob0lAoWRwAuRHhQZWX64QjN20tA6vFFm9V0q6CvEG-T-we6nLj7KtKqfMGiUiYPz8q6S-GsTlZ6O-C7S1nuJHxoaw=="> Link of Paper </a> 
 </li>	
 	
 <li> <u>Huang X </u>, Shao X, Xing L, <u>Hu Y</u>, Sin DD*, Zhang X*. The impact of lockdown timing on COVID-19 transmission across US counties. (<em> EClinicalMedicine</em> 2021 ) <a href="https://www.thelancet.com/journals/eclinm/article/PIIS2589-5370(21)00315-1/fulltext"> Link of Paper </a> 
