--- a/_pages/research.html
+++ b/_pages/research.html
@@ -15,6 +15,10 @@ Trainnees are underlined, last/corresponding authors denoted by *
 	
 <li> <u>Huang X </u>, Shao X, Xing L, <u>Hu Y</u>, Sin DD*, Zhang X*. The impact of lockdown timing on COVID-19 transmission across US counties. (<em> EClinicalMedicine</em> 2021 ) <a href="https://www.thelancet.com/journals/eclinm/article/PIIS2589-5370(21)00315-1/fulltext"> Link of Paper </a> 
 </li>
+
+	
+<li> Xing L, Zhang X, Burstyn I， Gustafson P. On logistic Box–Cox regression for flexibly estimating the shape and strength of exposure‐disease relationships. （<em>Canadian Journal of Statistics</em> 2021). <a href="https://onlinelibrary.wiley.com/doi/10.1002/cjs.11587"> Link of Paper </a> </li>
+  
 	
 <li> <u>Lu Y</u>, Zhou J, Xing L, Zhang X*. The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. (<em> Statistics in Medicine</em> 2021 ) <a href="https://doi.org/10.1002/sim.8868"> Link of Paper </a> and 
 <a href="https://cran.r-project.org/web/packages/DesignCTPB/index.html"> Software package </a> <br>
