--- a/_pages/team.html
+++ b/_pages/team.html
@@ -85,7 +85,8 @@ Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <fo
 <ul>
 	<li><strong>  <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a> </strong> (Assistant Professor, University of Saskatchewan, Canada), 2021.01 – Present<br>	
 	<li><strong>  Dr. Elham Majd</strong> (Lecturer, Islamic Azad University, Iran), 2020.10 – Present<br>	
-	<li><strong>  Xiaowen Cao</strong> (PhD student, Hebei University of Technology, China), 2020.02 – Present<br>	
+	<li><strong>  Yao Dong </strong> (Senior Technician, Hebei University of Technology, China， funded by CSC grant), 2021.12 – Present<br>						
+	<li><strong>  Xiaowen Cao</strong> (PhD student, Hebei University of Technology, China, funded by CSC fellowship), 2020.02 – Present<br>	
 </ul>
 
 
