--- a/_pages/openings.html
+++ b/_pages/openings.html
@@ -25,7 +25,9 @@ author_profile: true
 	<li> <a href="https://www.uvic.ca/vpfo/accounting/assets/docs/tuition/tuition-schedule.pdf"> UVic tuition </a> is about $2000 per term, which is much lower than most other universities in Canada.</li>
 <ol> <br>
 
-
+<h2>Intern students </h2> 
+I am hiring student interns, who has solid statistics knowledge, strong programming skills (R is prefered), and excellent scientific writing skills.  <br>	
+	<!--
 <h2> Prospective graduate or senior undergraduae students who are Canadian and permenant residence should check the following funding resources provided by the Government of Canada’s Student Work Placement Program</h2> 
 <ol>	
 	<li> <a href="https://www.wil-ait.digital/en/"> WIL Digital </a> </li> 
@@ -33,5 +35,6 @@ author_profile: true
 	<li> <a href="https://www.biotalent.ca/programs/student-work-placement-program/">  BioTalent </a> </li>	
 	<li> <a href="https://eco.ca/environmental-professionals/employment-funding-and-job-board/apply-for-job-funding/">  EcoCanada </a> </li>
 	<li> <a href="https://cahrc-ccrha.ca/programs/agritalent">  Canadian Agricultural Human Resource Council </a> </li>
-<!--	<li> <a href="https://cahrc-ccrha.ca/programs/agritalent">  Canadian Agricultural Human Resource Council </a> </li> -->
+	<li> <a href="https://cahrc-ccrha.ca/programs/agritalent">  Canadian Agricultural Human Resource Council </a> </li> 
 <ol>
+-->
