--- a/_pages/team.html
+++ b/_pages/team.html
@@ -35,8 +35,9 @@ Award: (2021.9-2022.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font c
 
 	<li><strong>  Chang Bi</strong> (Co-supervisor <a href="https://www.uvic.ca/research/centres/arc/people/adjunct-members/fabbro-sebastien.php"> Dr. Sebastien Fabbro</a>, NRC),  2021.09 – Present<br>
   </li>	
+	<li><strong>  Zhaoze Liu</strong>,  2021.09 – Present<br>	  </li>
 	
-	<li><strong>  Yupeng Zhao </strong>,  2021.09 – Present<br>	  </li>
+	<li><strong>  Yupeng Zhao </strong>,  2022.09 – Present<br>	  </li>
 
 	
 
@@ -60,7 +61,6 @@ Award: (2021.9-2022.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font c
 <h4>Master Students</h4>
 
 <ul>
-	<li><strong>  Xiaolin Huang</strong>,  2020.09 – Present<br>	  </li>
 	<li><strong>  Xiangling Ji</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	
 Work Study: (2021.01 - 2021.04) Centre for Biomedical Research, UVic  <br>
  <!--   Award: (2019.9) UVic Entrance Scholarship,   <font color="blue">$5,000</font> <br> -->
@@ -76,7 +76,6 @@ Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <fo
 	</li>	
 	
 	<li><strong>  Haochen Ning</strong>,  2021.09 – Present<br>	  </li>
-	<li><strong>  Zhaoze Liu</strong>,  2021.09 – Present<br>	  </li>
 <!--	<li><strong>  Hadi Roopeai</strong>,  2021.09 – Present<br>	  </li> -->
 	<li><strong>  Jinglan Qiu </strong>,  2021.09 – Present<br>	  </li>
 </ul>
@@ -147,6 +146,10 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 	
 <h4>Master Students</h4>
 <ul>
+	<li><strong>  Xiaolin Huang</strong>,  2020.09 – Present<br>	  
+	Firest job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver	
+	</li>
+	
 	<li><strong>  Yang Guo</strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2021.07<br>
  <!--	Internship:  <br>  -->
 Award: (2019.09-2020.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
@@ -201,7 +204,7 @@ First job: International Rice Research Institute  <br>
 	Work Study: (2017.09 - 2018.04) Centre for Biomedical Research, UVic  <br>
 	Internship:  (2018.05 - 2018.12)   <a href="https://www.bci.ca/"> British Columbia Investment Management Corporation </a>, Victoria <br>
 	First job: <a href="https://www.ea.com/"> Electronic Arts Inc. </a> , Vancouver  <br> 
-	Current job: <a href="https://www.ea.com/"> Amazon </a> , Vancouver
+	Current job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver
 
  <!--	Award 2: Trainee Award 2018.9-2019.9  <span class="pink">($19,000)</span> <br> -->
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
