--- a/_pages/team.html
+++ b/_pages/team.html
@@ -147,7 +147,7 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 	
 <h4>Master Students</h4>
 <ul>
-	<li><strong>  Xiaolin Huang</strong>,  2020.09 – Present<br>	  
+	<li><strong>  Xiaolin Huang</strong>,  2020.09 – 2022.06<br>	  
 	Firest job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver	
 	</li>
 	
