--- a/_pages/team.html
+++ b/_pages/team.html
@@ -147,7 +147,7 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 	
 <h4>Master Students</h4>
 <ul>
-	<li><strong>  Xiaolin Huang</strong>,  2020.09 – 2022.06<br>	  
+	<li><strong>  Xiaolin Huang</strong>,  2022.06<br>	  
 	Firest job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver	
 	</li>
 	
@@ -162,7 +162,7 @@ Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics,
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 
-	<li><strong>  Yuying Huang</strong> , 2019.09 – Present<br> <!--(Co-supervisor <a href="https://www.uvic.ca/socialsciences/economics/faculty-staff/home/faculty-directory/xu-ke.php"> Dr. Ke Xu</a>, UVic) -->
+	<li><strong>  Yuying Huang</strong> , 2021.08 <br> <!--(Co-supervisor <a href="https://www.uvic.ca/socialsciences/economics/faculty-staff/home/faculty-directory/xu-ke.php"> Dr. Ke Xu</a>, UVic) -->
 Work Study: (2019.09 - 2020.04) Centre for Biomedical Research, UVic  <br>
 Award: (2020.09-2021.08) VADA Trainee Scholarship (NSERC CREATE)<br> <!-- <font color="blue"> $19,000 </font> <br> -->
 Internship: (2021.06-2021.08) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
