--- a/_pages/team.html
+++ b/_pages/team.html
@@ -103,17 +103,13 @@ Award3: (2022.05-2022.08) Science Emerging Researcher Award (SERA) <br>
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 
-	<li><strong>  Aman Monga (UVic) </strong> , Full-time internship, 2022.05 – 2022.12<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
+	<li><strong>  Aman Monga (UVic) </strong> , Full-time internship, 2022.05 – 2022.12<br>   </li>
 
-	<li><strong>  Blake Smith (UVic) </strong> , Summer internship, 2022.05 – 2022.09<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
+	<li><strong>  Shanshan Xue (UVic) </strong> , Summer internship, 2022.05 – 2022.08<br>   </li>	
+
+	<li><strong>  Xuhui Wang (UVic) </strong> , Summer internship, 2022.05 – 2022.08<br>   </li>	
+	
+	<li><strong>  Blake Smith (UVic) </strong> , Summer internship, 2022.05 – 2022.09<br>   </li>
 
 	<li><strong>  Sen Mu (Tongji University) </strong> , 2022.05 – 2022.08<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
 Award: (2022.05-2022.08) MITACS Globalink Research Internship <br>
